--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.9.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "zod": "^4.1.12"
   }
