--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "npx tsc && node dist/index.js"
+    "start": "tsx ./src/index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +17,17 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.9.0",
+    "drizzle-kit": "^0.31.5",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
+    "postgres": "^3.4.7",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.6",
     "zod": "^4.1.12"
   }
 }
