--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
     "postgres": "^3.4.7",
     "tsconfig-paths": "^4.2.0",
