--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.0",
     "drizzle-kit": "^0.31.5",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.5"
   },
   "dependencies": {
     "argon2": "^0.44.0",
@@ -27,6 +29,7 @@
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.7",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
