--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "vitest --run",
     "start": "tsx ./src/index.ts",
     "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
   },
